--- a/DOM/SA02JogoQuiz/index.html
+++ b/DOM/SA02JogoQuiz/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SA02 - Jogo Quiz</title>
-    <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="quizContainer">
         <h1>Quiz Interativo</h1>
         <p id="pergunta"></p>
         <div id="opcoes"></div>
-        <button id="proxima" disable>Proxima Pergunta</button>
+        <button id="proxima" disable>Próxima Pergunta</button>
         <p id="resultado"></p>
     </div>
 </body>
